add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -8,6 +8,14 @@
   <h2>Written with a little guidance from Moringa School</h2>
   <p>Hello World!</p>
   <p>Welcome to my first webpage!</p>
+  <p>Here are somethings I am going to learn about coding;</p>
+  <ul>
+    <l1>HTML</l1>
+    <l1>CSS</l1>
+    <l1>JavaScript</l1>
+    <l1>And a lot more!</l1>
+  </ul>
+  
 
 </body>
 </html>
