add list elements

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -10,12 +10,12 @@
   <p>Welcome to my first webpage!</p>
   <p>Here are somethings I am going to learn about coding;</p>
   <ul>
-    <l1>HTML</l1>
-    <l1>CSS</l1>
-    <l1>JavaScript</l1>
-    <l1>And a lot more!</l1>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>And a lot more!</li>
   </ul>
-  
+
 
 </body>
 </html>
